src/objects/Demo_Team__c.object
<CustomObject>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GW_Public_Id__c</fullName>
        <externalId>true</externalId>
        <label>GW Public Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Event__c</fullName>
        <label>Sales Event</label>
        <referenceTo>Sales_Event__c</referenceTo>
        <relationshipLabel>Demo Teams</relationshipLabel>
        <relationshipName>Demo_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <label>Demo Team</label>
    <nameField>
        <label>Demo Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>